[package]
name = "hyper-ui"
version = "0.1.0"
edition = "2021"
description = "A chakra-ui like library for dioxus"
authors = ["Jason Qin"]
license-file = "LICENSE"

[[example]]
name = "main"

[workspace]
members = ["macros"]

[dependencies]
dioxus = { version = "0.2.4", features = ["fermi", "router"] }
hyper-macros = { path = "macros" }

[dev-dependencies]
dioxus = { version = "0.2.4", features = ["desktop", "fermi", "router"] }
yew = "0.19.3"
